# disc-golf-api

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.local-bridge.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  start_app.py
.github/: dependabot.yml
.github/workflows/: build-and-test.yaml  build.yaml  release.yaml
bash_scripts/: pre_start.sh
data/: client.py  course_processing.py  disc_event_processing.py  event_session_processing.py  league_session_processing.py  main.py  round_processing.py  t-c-jester-park-zVh6.json  tc-jester-hfds-league-2025-03-12.csv  tc-jester-hfds-league-tc-jester-hfds-league-2025-03-19.csv  tc-jester-hfds-league-tc-jester-hfds-league-2025-03-19.xlsx  tc-jester-hfds-league-tc-jester-hfds-league-2025-03-26.csv
data/courses/: t-c-jester-park-zVh6.json
data/disc_events/: tcj_session_2025_2.json  tcj_session_2025_3.json
data/event_results/: tc-jester-hfds-league-2025-03-12.xlsx  tc-jester-hfds-league-session-2-week-1-2025-04-30.csv  tc-jester-hfds-league-session-2-week-2-2025-05-07.csv  tc-jester-hfds-league-session-2-week-3-2025-05-14.csv  tc-jester-hfds-league-session-2-week-4-2025-05-21.csv  tc-jester-hfds-league-session-2-week-5-2025-05-28.csv  tc-jester-hfds-league-session-2-week-6-2025-06-04.csv  tc-jester-hfds-league-session-3-week-1-2025-06-18.csv  tc-jester-hfds-league-session-3-week-2-2025-06-25.csv  tc-jester-hfds-league-session-3-week-3-2025-07-02.csv  tc-jester-hfds-league-session-3-week-4-2025-07-16.csv  tc-jester-hfds-league-session-3-week-5-2025-07-23.csv  tc-jester-hfds-league-session-3-week-6-2025-07-30.csv  tc-jester-hfds-league-session-4-week-1-2025-08-06.csv  tc-jester-hfds-league-session-4-week-1-2025-08-06.xlsx  tc-jester-hfds-league-session-4-week-2-2025-08-13.csv  tc-jester-hfds-league-session-4-week-2-2025-08-13.xlsx  tc-jester-hfds-league-session-4-week-3-2025-08-20.csv  tc-jester-hfds-league-session-4-week-3-2025-08-20.xlsx  tc-jester-hfds-league-session-4-week-4-2025-08-27.csv  tc-jester-hfds-league-session-4-week-4-2025-08-27.xlsx  tc-jester-hfds-league-session-4-week-5-2025-09-03.csv  tc-jester-hfds-league-session-4-week-5-2025-09-03.xlsx  tc-jester-hfds-league-session-4-week-6-2025-09-10.csv  tc-jester-hfds-league-session-4-week-6-2025-09-10.xlsx  tc-jester-hfds-league-session-5-week-1-2025-09-24.csv  tc-jester-hfds-league-session-5-week-1-2025-09-24.xlsx  tc-jester-hfds-league-session-5-week-2-2025-10-01.csv  tc-jester-hfds-league-session-5-week-2-2025-10-01.xlsx  tc-jester-hfds-league-session-5-week-3-2025-10-08.csv  tc-jester-hfds-league-session-5-week-3-2025-10-08.xlsx  tc-jester-hfds-league-session-5-week-4-2025-10-15.csv  tc-jester-hfds-league-session-5-week-5-2025-10-22.csv  tc-jester-hfds-league-session-5-week-6-2025-10-29.csv  tc-jester-hfds-league-tc-jester-hfds-league-2025-03-26.xlsx  tc-jester-hfds-league-tc-jester-hfds-league-2025-04-02.csv  tc-jester-hfds-league-tc-jester-hfds-league-2025-04-02.xlsx  tc-jester-hfds-league-tc-jester-hfds-league-2025-04-09.csv  tc-jester-hfds-league-tc-jester-hfds-league-2025-04-09.xlsx  tc-jester-hfds-league-tc-jester-hfds-league-2025-04-16.csv  (+1 more)
data/league_sessions/: tcj_session_2025_1.json
discord_interface/: main.py
locust_tests/: locust_event_results.py
migrations/: env.py
migrations/versions/: 01bea077fcce_league_round_update.py  105df4158516_course_conditions.py  279fbb3998cf_round_points.py  2940c4327541_initial_tables.py  3cf561e274ca_autoincrement.py  52393ebe4d1e_course_links.py  5fffbb8c63c6_event_update.py  7d8234194ee2_.py  7e51c0594cd9_league_round_update_v5.py  81db86fea79c_sessions_to_events.py  8ee01a5ee615_hole_change.py  94a22b457718_course_links.py  95b51638aaad_league_round_update_v2.py  a673fefa5c96_league_round_update_v4.py  a88f017e2a08_auto_upgrade_sync_schema_with_latest_.py  b73a1f9c2d4e_create_disc_events_idempotent.py  d83b9ec34c46_event_result_date.py  d8ecb5131eed_update_models.py  d91051d79439_initial_commit.py  ddd00526aa27_disc_golf_data.py  e30ea7f6243e_league_sessions.py
pytests/: test_course_layouts.py  test_courses.py  test_courses_layouts.py  test_disc_events.py  test_event_result.py  test_event_sessions.py  test_league_sessions.py  test_response_validation.py
scraping/: fetch_course_details.py  fetch_course_list.py  fetch_course_pages.py  schemas.py  scrape_udisc.py
src/: __init__.py  create_db_and_roles.py  initial_data.py  main.py  pre_start.py  utils.py
src/api/: __init__.py  deps.py  main.py
src/api/routes/: __init__.py  course_layouts.py  courses.py  courses_layouts.py  disc_event.py  event_result.py  event_sessions.py  healthcheck.py  league_sessions.py  login.py  private.py
src/core/: __init__.py  config.py  db.py  security.py
src/crud/: __init__.py  course.py  course_layout.py  disc_event.py  event_result.py  event_session.py  hole.py  league_session.py  user.py
src/data/: tc_jester.json
src/models/: __init__.py  base.py  course.py  course_layout.py  disc_event.py  event_result.py  event_session.py  hole.py  layout.py  league_session.py  relationships.py  user.py
src/schemas/: __init__.py  course_layouts.py  courses.py  disc_events.py  event_results.py  event_sessions.py  holes.py  league_sessions.py  users.py
tests/: test_courses_layouts.py
