[project]
name = "disc-golf-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "alembic==1.16.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "astroid==3.3.10",
    "asttokens==3.0.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "bcrypt==4.0.1",
    "black==25.1.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "click-option-group==0.5.7",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "deprecated==1.2.18",
    "dill==0.4.0",
    "discord-py==2.5.2",
    "dnspython==2.7.0",
    "dotty-dict==1.3.1",
    "email-validator==2.2.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.7",
    "frozenlist==1.7.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "icecream==2.1.4",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "isort==6.0.1",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "multidict==6.6.3",
    "mypy-extensions==1.1.0",
    "numpy==2.2.6",
    "nvidia-ml-py==12.575.51",
    "packaging==25.0",
    "pandas==2.3.0",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "playwright==1.52.0",
    "pluggy==1.6.0",
    "propcache==0.3.2",
    "psutil==7.0.0",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pyee==13.0.0",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pylint==3.3.7",
    "pylint-plugin-utils==0.8.2",
    "pylint-pydantic==0.3.5",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-gitlab==6.0.0",
    "python-multipart==0.0.20",
    "python-semantic-release==10.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis>=6.2.0",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rich-toolkit==0.14.7",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.47.2",
    "tenacity==9.1.2",
    "tomli==2.2.1",
    "tomlkit==0.13.3",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "yarl==1.20.1",
]
