[project]
name = "disc-golf-api"
version = "1.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.3",
    "aiosignal>=1.4.0",
    "alembic>=1.17.1",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "astroid>=4.0.3",
    "asttokens>=3.0.0",
    "async-timeout>=5.0.1",
    "attrs>=25.4.0",
    "bcrypt==4.0.1",
    "black>=25.9.0",
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "click-option-group>=0.5.9",
    "cloudpickle>=3.1.2",
    "colorama>=0.4.6",
    "deprecated>=1.3.1",
    "dill>=0.4.0",
    "discord-py>=2.6.4",
    "dnspython>=2.8.0",
    "dotty-dict>=1.3.1",
    "email-validator>=2.3.0",
    "exceptiongroup>=1.3.0",
    "executing>=2.2.1",
    "fastapi>=0.128.0",
    "fastapi-cli>=0.0.20",
    "frozenlist>=1.8.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.45",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "icecream>=2.1.8",
    "idna>=3.11",
    "importlib-resources>=6.5.2",
    "iniconfig>=2.3.0",
    "isort>=7.0.0",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "mccabe>=0.7.0",
    "mdurl>=0.1.2",
    "multidict>=6.7.0",
    "mypy-extensions>=1.1.0",
    "numpy>=2.3.4",
    "nvidia-ml-py>=13.580.82",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pathspec>=0.12.1",
    "platformdirs>=4.5.1",
    "playwright>=1.55.0",
    "pluggy>=1.6.0",
    "propcache>=0.4.1",
    "psutil>=7.1.3",
    "psycopg>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-core>=2.41.4",
    "pydantic-settings>=2.11.0",
    "pygments>=2.19.2",
    "pyjwt>=2.10.1",
    "pylint>=4.0.4",
    "pylint-plugin-utils>=0.9.0",
    "pylint-pydantic>=0.4.1",
    "pytest>=8.4.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "python-semantic-release>=10.4.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "redis>=6.2.0",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "rich>=14.2.0",
    "rich-toolkit>=0.17.1",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.45",
    "starlette>=0.50.0",
    "tenacity>=9.1.2",
    "tomli>=2.3.0",
    "tomlkit>=0.14.0",
    "typer>=0.21.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.2",
    "urllib3>=2.6.3",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
    "wrapt>=2.0.0",
    "yarl>=1.22.0",
]

[dependency-groups]
dev = []

[tool.semantic_release]
version_source = "pyproject.toml"
changelog_file = "CHANGELOG.md"
changelog_sections = "all"
commit_author = "github-actions <actions@users.noreply.github.com>"